--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
 
-      background: #ffff00;
+      background: #ff002b;
       color: #333;
       font-size: 14px;
       font-family: 'Raleway', sans-serif;
