--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 body {
 
-      background: #ff002b;
+      background: #0055a4;
       color: #333;
       font-size: 14px;
-      font-family: 'Raleway', sans-serif;
+      font-family: 'Roboto', sans-serif;
       padding: 0;
       margin: 0;
 
