--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ body {
 * {
 
   box-sizing: border-box;
-  font-family: 'Raleway', sans-serif;
+  font-family: 'Roboto', sans-serif;
   margin: 0;
   font-size: 16px;
   outline: none;
