--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
       background: #333366;
       color: #333;
       font-size: 14px;
-      font-family: 'Roboto', sans-serif;
+      font-family: 'Raleway', sans-serif;
       padding: 0;
       margin: 0;
 
@@ -13,7 +13,7 @@ body {
 * {
 
   box-sizing: border-box;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Raleway', sans-serif;
   margin: 0;
   font-size: 16px;
   outline: none;
