--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body {
 
-      background: #3333cc;
+      background: #ff002b;
       color: #000;
       font-size: 14px;
       font-family: 'Raleway', sans-serif;
