--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
 
       background: #ff002b;
-      color: #000;
+      color: rgba(255, 0, 84, 164);
       font-size: 14px;
       font-family: 'Raleway', sans-serif;
       padding: 0;
