--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body {
 
-      background: #ff002b;
+      background: #ffffff;
       color: rgba(255, 0, 84, 164);
       font-size: 14px;
       font-family: 'Raleway', sans-serif;
