--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h1{
 
 textarea{
   border: 0px;
-  background: #fff;
+  background: #ffffff;
   padding: 20px 0p;
   outline:  none;
   width: 100%;
