--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
 
       background: #ffffff;
-      color: rgba(0, 84, 164, 250);
+      color: #ffffff;
       font-size: 14px;
       font-family: 'Raleway', sans-serif;
       padding: 0;
